testsuite/tests/parser/should_fail/patFail006.stderr

patFail006.hs:3:4: error: Parse error in pattern: -(1)
